# Learning-C

./: CMakeLists.txt
Arithmetic_operations/: conversionmskmh.c  convertionkmm.c  increase.c  inverse.c  rest.c  sphere.c  square.c  temper.c
Conditional/: Salary.c  killer.c  notes.c  pairofodd.c  triangle.c  verificationdate.c  week.c
Structures/: characters.c  product.c  student.c
