cmake_minimum_required(VERSION 3.29)
project(Learning_C C)

set(CMAKE_C_STANDARD 11)

add_executable(Learning_C
    Arithmetic_operations/conversionmskmh.c
    Arithmetic_operations/increase.c
    Arithmetic_operations/inverse.c
    Arithmetic_operations/rest.c
    Arithmetic_operations/sphere.c
    Arithmetic_operations/square.c
        Arithmetic_operations/temper.c
        Arithmetic_operations/convertionkmm.c
        Conditional/notes.c
        Conditional/verificationdate.c)
